# TransportationProblem

./: HAHA.txt  README.md  TCC.py  TCC_outrojeito.py  create_instance.py  gera_casos.py  input_transport_problem.txt  instances.txt  out.sol
NSGA/: GA.py  TCC.py  ajuda.py  defines.py  evolution.py  genetico.py  grande1.txt  grande2.txt  grande3.txt  grande4.txt  individuo.py  input.py  input_2.py  input_transport_problem.txt  instancias_pequenas0.txt  instancias_pequenas0_tempo.txt  instancias_pequenas1.txt  instancias_pequenas10.txt  instancias_pequenas10_tempo.txt  instancias_pequenas11.txt  instancias_pequenas11_tempo.txt  instancias_pequenas13.txt  instancias_pequenas13_tempo.txt  instancias_pequenas14.txt  instancias_pequenas1_tempo.txt  instancias_pequenas2.txt  instancias_pequenas2_tempo.txt  instancias_pequenas3.txt  instancias_pequenas3_tempo.txt  instancias_pequenas4.txt  instancias_pequenas4_tempo.txt  instancias_pequenas5.txt  instancias_pequenas5_tempo.txt  instancias_pequenas6.txt  instancias_pequenas6_tempo.txt  instancias_pequenas7.txt  instancias_pequenas7_tempo.txt  instancias_pequenas8.txt  instancias_pequenas8_tempo.txt  instancias_pequenas9.txt  (+42 more)
NSGA/teste_mult/: aux.py  instancias_grandes7.txt  instancias_grandes7_tempo.txt  instancias_grandes_5_result.txt  instancias_grandes_7_resul.txt  instancias_pequenas3_tempo.txt  instancias_pequenas4.txt  instancias_pequenas4_tempo.txt  instancias_pequenas6_tempo.txt  instancias_pequenas_1_resul.txt  instancias_pequenas_2_resul.txt  instancias_pequenas_3_result.txt  instancias_pequenas_4_resul.txt  (+17 more)
(+11 files in other folders)
