[tool.poetry]
name = "ansga"
version = "0.1.0"
description = ""
authors = ["eliel.silva <eliel.silva@enacom.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
